--- a/Projects/Kepanitiaan Ad Hoc/app.ipynb
+++ b/Projects/Kepanitiaan Ad Hoc/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,16 +253,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "keywords = ['Koordinator', 'Ketua', 'Wakil Ketua', 'Sekretaris', 'Bendahara', 'Panitia Ad Hoc']\n",
+    "keywords = ['Wakil Ketua', 'Koor', 'Ketua', 'Sekretaris', 'Bendahara', 'Panitia Ad Hoc']\n",
     "\n",
     "def update_status(row):\n",
     "    if pd.notna(row['description']):\n",
     "        for keyword in keywords:\n",
-    "            if keyword in row['description']:\n",
+    "            if keyword.lower() in row['description'].lower():\n",
     "                return keyword\n",
     "    return row['status']\n",
     "\n",
@@ -270,19 +270,19 @@
     "\n",
     "unique_activities = df.drop_duplicates(subset='activity')[['code', 'activity', 'trx_code']]\n",
     "\n",
-    "no_description = df[df['description'].isna()]\n",
+    "no_description = df[df['description'].isna() & (df['status'] == 'Panitia Ad Hoc')]\n",
     "\n",
     "with pd.ExcelWriter('output_file.xlsx', engine='xlsxwriter') as writer:\n",
-    "    unique_activities.to_excel(writer, sheet_name='Unique Activities', index=False)\n",
-    "\n",
-    "    no_description.to_excel(writer, sheet_name='No Description', index=False)\n",
-    "    \n",
     "    for keyword in keywords:\n",
-    "        filtered_df = df[df['status'] == keyword]\n",
+    "        filtered_df = df[(df['status'] == keyword) & (df['description'].notna())]\n",
     "        if not filtered_df.empty:\n",
     "            filtered_df.to_excel(writer, sheet_name=keyword, index=False)\n",
     "    \n",
-    "    df.to_excel(writer, sheet_name='All', index=False)\n"
+    "    df.to_excel(writer, sheet_name='All', index=False)\n",
+    "    \n",
+    "    unique_activities.to_excel(writer, sheet_name='Unique Activities', index=False)\n",
+    "\n",
+    "    no_description.to_excel(writer, sheet_name='No Description', index=False)\n"
    ]
   }
  ],
