--- a/Projects/Data PFA/run.ipynb
+++ b/Projects/Data PFA/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "[95 rows x 40 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2011,7 +2011,7 @@
        "[31 rows x 38 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2022,12 +2022,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "student_summary.to_excel('student_summary.xlsx', index=False)\n",
     "lecturer_summary.to_excel('lecturer_summary.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_pfa = pd.read_excel('Data PFA.xlsx', sheet_name=\"Mahasiswa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_final = pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_final['Name'] = data_pfa['Nama Lengkap']\n",
+    "data_final['In_Target1'] = data_pfa['Nama Lengkap'].str.lower().isin(student_pretest['Nama Lengkap'].str.lower())\n",
+    "data_final['In_Target2'] = data_pfa['Nama Lengkap'].str.lower().isin(student_posttest['Nama Lengkap'].str.lower())\n",
+    "\n",
+    "# Check if present in both target dataframes\n",
+    "data_final['In_Both'] = data_final['In_Target1'] & data_final['In_Target2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     In_Target1  In_Target2  In_Both                              Name\n",
+      "0          True        True     True      jessica amelia putri subekti\n",
+      "1          True        True     True  Dave Gideon Tanjung Wirjoatmodjo\n",
+      "2          True        True     True              Ivy Jocelyn Haryanto\n",
+      "3          True        True     True            Titania Rendy Callista\n",
+      "4          True        True     True           Lavenia Sentoso Gunarto\n",
+      "..          ...         ...      ...                               ...\n",
+      "116       False       False    False             Debora Katherine Logo\n",
+      "117        True       False    False             Maxwell Ethan Muliadi\n",
+      "118        True       False    False                        Ahmad afif\n",
+      "119        True       False    False       Ingwei Flora Sharon Sitorus\n",
+      "120       False        True    False  Nicole Clarence Theodora Wahyudi\n",
+      "\n",
+      "[121 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_final.to_excel('olah_pfa.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student_posttest"
    ]
   }
  ],
