--- a/Projects/ST Automation/hardiknas.ipynb
+++ b/Projects/ST Automation/hardiknas.ipynb
@@ -57,9 +57,8 @@
     "    start_date = pd.to_datetime(row['Start Date'])\n",
     "    end_date = pd.to_datetime(row['End Date'])\n",
     "    \n",
-    "    # Format day and date (e.g., \"Selasa - Kamis/26 - 28 April 2024\")\n",
-    "    start_day = start_date.strftime(\"%A\")  # Day of the week\n",
-    "    start_formatted = start_date.strftime(\"%d %B %Y\")  # Date in \"26 April 2024\" format\n",
+    "    start_day = start_date.strftime(\"%A\")  # day\n",
+    "    start_formatted = start_date.strftime(\"%d %B %Y\")  # DD-MM-YYYY format\n",
     "    end_day = end_date.strftime(\"%A\")\n",
     "    end_formatted = end_date.strftime(\"%d %B %Y\")\n",
     "    \n",
@@ -447,9 +446,9 @@
     "    lecturer_name = row['Nama Dosen PA']\n",
     "    lecturer_nidn = row['NIDN Dosen PA']\n",
     "\n",
-    "    # Add lecturer information\n",
+    "    # dosen\n",
     "    lecturer_row = table.add_row().cells\n",
-    "    lecturer_row[0].text = \"1\"  # No\n",
+    "    lecturer_row[0].text = \"1\"\n",
     "    lecturer_row[1].text = lecturer_name  # Nama\n",
     "    lecturer_row[2].text = str(lecturer_nidn)  # NIM/NIK\n",
     "    lecturer_row[3].text = \"Dosen Pendamping\"  # Departemen/Prodi\n",
@@ -458,9 +457,9 @@
     "    student_nis = row['NIS']\n",
     "    student_department = row['Major']\n",
     "        \n",
-    "    # Add student information\n",
+    "    # mhs\n",
     "    student_row = table.add_row().cells\n",
-    "    student_row[0].text = \"2\"  # N\n",
+    "    student_row[0].text = \"2\" \n",
     "    student_row[1].text = student_name  # Nama\n",
     "    student_row[2].text = str(student_nis)  # NIM/NIK\n",
     "    student_row[3].text = student_department  # Departemen/Prodi\n",
