--- a/Projects/Tarik Data KP/run.ipynb
+++ b/Projects/Tarik Data KP/run.ipynb
@@ -295,11 +295,9 @@
     "output_file = \"combined_data_by_year.xlsx\"\n",
     "with pd.ExcelWriter(output_file) as writer:\n",
     "    for year, data_list in data_by_year.items():\n",
-    "        # Concatenate all DataFrames for this year into a single DataFrame\n",
     "        combined_data = pd.concat(data_list, ignore_index=True)\n",
     "        \n",
-    "        # Write the combined data to a sheet named after the year\n",
-    "        combined_data.to_excel(writer, sheet_name=f\"Year_{year}\", index=False)\n"
+    "        combined_data.to_excel(writer, sheet_name=f\"Year_{year}\", index=False)"
    ]
   },
   {
@@ -311,16 +309,11 @@
     "summary_data = []\n",
     "\n",
     "for year, data_list in data_by_year.items():\n",
-    "    # Concatenate data for each year\n",
     "    combined_data = pd.concat(data_list, ignore_index=True)\n",
-    "    \n",
-    "    # year_column_mapping = column_mappings.get(year, {})\n",
-    "    # data_with_mapped_columns = combined_data.rename(columns=year_column_mapping)\n",
     "    \n",
     "    year_thresholds = thresholds[year]\n",
     "    \n",
     "    for major, group in combined_data.groupby('Major'):\n",
-    "        # Count active and inactive students\n",
     "        active_students = group[group['Status'] == 'Aktif'].shape[0]\n",
     "        inactive_students = group[group['Status'] != 'Aktif'].shape[0]\n",
     "        \n",
@@ -347,7 +340,7 @@
     "        summary_row.update(below_threshold_counts)\n",
     "        \n",
     "        # Append the summary row to the summary data list\n",
-    "        summary_data.append(summary_row)\n"
+    "        summary_data.append(summary_row)"
    ]
   },
   {
