--- a/Projects/PILMAPRES/main/pilmapres.ipynb
+++ b/Projects/PILMAPRES/main/pilmapres.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "Name: Level, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "Name: Status, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "Name: Major, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             NIS                     Name        Field  Total  Score\n",
+      "0  0106012110024   Michelle Henny Limbono    Kompetisi      1     15\n",
+      "1  0106012110036        Jesslyn Andressah  Hasil Karya      2     40\n",
+      "2  0106012110040      Ricca Arifa Rachman  Hasil Karya      2     20\n",
+      "3  0106012110042  Geovanka Cyndie Tiandya  Hasil Karya      2     40\n",
+      "4  0106012110043            Ricky Hartono  Hasil Karya      1     20\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = (\n",
+    "    df_filtered_field.groupby(['NIS', 'Name', 'Field'])['Score']\n",
+    "    .agg(Total='count',Score='sum')\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "print(result.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             NIS                     Name  Score_Hasil Karya  \\\n",
+      "0  0106012110024   Michelle Henny Limbono                  0   \n",
+      "1  0106012110036        Jesslyn Andressah                 40   \n",
+      "2  0106012110040      Ricca Arifa Rachman                 20   \n",
+      "3  0106012110042  Geovanka Cyndie Tiandya                 40   \n",
+      "4  0106012110043            Ricky Hartono                 20   \n",
+      "\n",
+      "   Score_Karir Organisasi  Score_Kompetisi  \\\n",
+      "0                       0               15   \n",
+      "1                       0                0   \n",
+      "2                       0                0   \n",
+      "3                       0                0   \n",
+      "4                       0                0   \n",
+      "\n",
+      "   Score_Pemberdayaan atau Aksi Kemanusiaan  Score_Pengakuan  \\\n",
+      "0                                         0                0   \n",
+      "1                                         0                0   \n",
+      "2                                         0                0   \n",
+      "3                                         0                0   \n",
+      "4                                         0                0   \n",
+      "\n",
+      "   Total_Hasil Karya  Total_Karir Organisasi  Total_Kompetisi  \\\n",
+      "0                  0                       0                1   \n",
+      "1                  1                       0                0   \n",
+      "2                  1                       0                0   \n",
+      "3                  1                       0                0   \n",
+      "4                  1                       0                0   \n",
+      "\n",
+      "   Total_Pemberdayaan atau Aksi Kemanusiaan  Total_Pengakuan  \n",
+      "0                                         0                0  \n",
+      "1                                         0                0  \n",
+      "2                                         0                0  \n",
+      "3                                         0                0  \n",
+      "4                                         0                0  \n",
+      "Pivoted file saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Pivot the table to make 'Field' values as columns for 'Field_Score' and 'Total_Entries'\n",
+    "pivot_result = result.pivot_table(index=['NIS', 'Name'], \n",
+    "                                  columns='Field', \n",
+    "                                  values=['Total', 'Score'], \n",
+    "                                  aggfunc={'Total': 'count', 'Score': 'sum'}, \n",
+    "                                  fill_value=0)\n",
+    "\n",
+    "# Flatten the MultiIndex (optional)\n",
+    "pivot_result.columns = [f'{col[0]}_{col[1]}' for col in pivot_result.columns]  # Flatten multi-level column names\n",
+    "pivot_result.reset_index(inplace=True)\n",
+    "\n",
+    "# Display the pivoted result\n",
+    "print(pivot_result.head())\n",
+    "\n",
+    "# Save the pivoted result to a CSV file or Excel file\n",
+    "pivot_result.to_excel('C:\\\\Users\\\\hansj\\\\OneDrive\\\\Documents\\\\Student Affairs\\\\Projects\\\\PILMAPRES\\\\main\\\\output\\\\pivoted_student_total_scores.xlsx', index=False)\n",
+    "\n",
+    "print(\"Pivoted file saved.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +1028,7 @@
        "4  Hasil Karya     20  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1120,7 @@
        "4  0106012110043            Ricky Hartono  Management - Reguler Class     20"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1235,7 @@
        "35   0106012110151  Valentino Limbang Jaya  Management - Reguler Class    100"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1326,7 @@
        "386  0106042110051    Vianney Parameswara Ali  Accounting    100"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
