--- a/Side Quests/Data Counseling Welfare (Tidying)/sort.ipynb
+++ b/Side Quests/Data Counseling Welfare (Tidying)/sort.ipynb
@@ -191,20 +191,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import pandas as pd\n",
-    "\n",
     "def categorize_by_organization(df, organizations, question_classifications):\n",
     "    categorized_data = {category: [] for category in question_classifications}\n",
     "\n",
-    "    # Iterate over each organization\n",
     "    for org in organizations:\n",
-    "        org_df = df[df[org] == 1]  # Filter rows where the student belongs to the organization\n",
+    "        org_df = df[df[org] == 1]\n",
     "        \n",
-    "        # Create a dictionary to store categorized data for each organization\n",
     "        org_categorized_data = {category: [] for category in question_classifications}\n",
     "\n",
-    "        # Iterate over each student's data in the organization\n",
     "        for index, row in org_df.iterrows():\n",
     "            student_data = {\n",
     "                'Survey Name': row['nama_survey'],\n",
@@ -214,36 +208,28 @@
     "                'Organization': org\n",
     "            }\n",
     "            \n",
-    "            # Categorize answers based on question type\n",
     "            for category, questions in question_classifications.items():\n",
-    "                category_data = student_data.copy()  # Start with the student's basic info\n",
+    "                category_data = student_data.copy()\n",
     "                total_score = 0\n",
     "                \n",
-    "                # Loop over the questions in the category\n",
     "                for question in questions:\n",
-    "                    # Search for a column that matches the question using pattern matching\n",
     "                    for column in df.columns:\n",
     "                        # Match based on substring or regex pattern (use re for pattern matching)\n",
     "                        if re.search(re.escape(question), column, re.IGNORECASE):\n",
-    "                            # Column matches the question pattern, assign the answer\n",
     "                            answer = row[column]\n",
     "                            category_data[question] = answer\n",
     "                            total_score += answer\n",
-    "                            break  # Stop looking for other matching columns\n",
+    "                            break\n",
     "                        \n",
-    "                if total_score > 0:  # Only add total if there are matching answers\n",
+    "                if total_score > 0:\n",
     "                    category_data['Grand Total'] = total_score\n",
     "        \n",
-    "                # Add to categorized_data only if there's an answer for this category\n",
     "                if category_data != student_data:\n",
     "                    org_categorized_data[category].append(category_data)\n",
     "\n",
-    "        # Save the categorized data for this organization into an Excel file\n",
     "        with pd.ExcelWriter(f'{org}_2024.xlsx') as writer:\n",
     "            for category, data in org_categorized_data.items():\n",
-    "                # Convert the list of dictionaries (categorized data) to a DataFrame\n",
-    "                df_category = pd.DataFrame(data)\n",
-    "                # Write each category as a separate sheet\n",
+    "                df_category = pd.DataFrame(data\n",
     "                df_category.to_excel(writer, sheet_name=category, index=False)\n",
     "    \n",
     "    print(\"Data has been saved to separate Excel files for each organization.\")"
